# ledger-sdk-rust

./: COMPARISON.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: publish.yml
apdu/: Cargo.toml
apdu/src/: lib.rs
eth-app/: Cargo.toml
eth-app/src/: lib.rs
examples/: Cargo.toml  basic_test.rs  eip712_test.rs  usdc_permit_example.rs
ledger-apdu/: Cargo.toml
ledger-apdu/src/: lib.rs
ledger-device-base/: Cargo.toml
ledger-device-base/src/: errors.rs  lib.rs
ledger-eth-app/: Cargo.toml
ledger-eth-app/src/: eip712_high_level.rs  errors.rs  instructions.rs  lib.rs  types.rs  utils.rs
ledger-eth-app/src/commands/: get_address.rs  get_config.rs  mod.rs  sign_eip712.rs  sign_message.rs  sign_transaction.rs
ledger-eth-app/src/commands/eip712/: encoding.rs  filtering.rs  high_level.rs  mod.rs  signing.rs  structs.rs
ledger-eth-app/src/commands/eip712/encoding/: field_definition.rs  filter_params.rs  mod.rs  utils.rs
ledger-eth-app/src/commands/eip712/filtering/: apdu.rs  mod.rs  types.rs
ledger-eth-app/src/commands/eip712/signing/: full.rs  mod.rs  utils.rs  v0.rs
ledger-eth-app/src/commands/eip712/struct_definition/: apdu.rs  mod.rs
ledger-eth-app/src/commands/eip712/struct_implementation/: apdu.rs  mod.rs
ledger-transport/: Cargo.toml
ledger-transport-hid/: Cargo.toml
ledger-transport-hid/src/: errors.rs  lib.rs
ledger-transport/src/: lib.rs
scripts/: publish.sh  version.sh
transport/: Cargo.toml
transport/src/: lib.rs
