[package]
name = "ledger-examples"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "basic_test"
path = "basic_test.rs"

[[bin]]
name = "usdc_permit_example"
path = "usdc_permit_example.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
hex = "0.4"
serde_json = "1.0"

# Local dependencies
ledger-sdk-transport = "0.0.1"
ledger-sdk-transport-hid = "0.0.1"
ledger-sdk-eth-app = "0.0.1"
ledger-sdk-apdu = "0.0.1"
