[package]
name = "ledger-sdk-apdu"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "APDU types and helpers for Ledger device communication"
readme = "../README.md"
repository = "https://github.com/0xjojo1/ledger-sdk-rust"
keywords = ["ledger", "apdu", "hardware-wallet", "cryptocurrency"]
categories = ["cryptography", "hardware-support"]
authors = ["0xjojo1 <jojomemo5129@gmail.com>"]

[features]
std = ["snafu/std", "no-std-compat/std"]
default = ["std"]

[dependencies]
arrayref = "0.3"
no-std-compat = "0.4"
snafu = { version = "0.8", default-features = false }
