[package]
name = "ledger-sdk-device-base"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Base device and app information helpers for Ledger devices"
readme = "../README.md"
repository = "https://github.com/0xjojo1/ledger-sdk-rust"
keywords = ["ledger", "device", "hardware-wallet", "cryptocurrency"]
categories = ["cryptography", "hardware-support"]
authors = ["0xjojo1 <jojomemo5129@gmail.com>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.16"
async-trait = "0.1"
ledger-sdk-transport = "0.0.1"
