[package]
name = "ledger-eth-app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Ledger Ethereum app interaction helpers built on ledger-transport and ledger-device-base"
readme = "../README.md"
repository = "https://github.com/your-org/ledger-sdk-rust"

[dependencies]
async-trait = "0.1"
ledger-transport = { path = "../ledger-transport" }
ledger-device-base = { path = "../ledger-device-base" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
