[package]
name = "ledger-transport-hid"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
byteorder = "1.5"
cfg-if = "1"
thiserror = "2.0.16"
hex = "0.4"
log = "0.4"

ledger-transport = { path = "../ledger-transport" }
hidapi = { version = "2.6.1", features = [
    "linux-static-hidraw",
], default-features = false }

[dev-dependencies]
once_cell = "1"
serial_test = "3"
env_logger = "0.11"
futures = "0.3"
