[package]
name = "ledger-sdk-transport-hid"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "HID transport implementation for Ledger device communication"
readme = "../README.md"
repository = "https://github.com/0xjojo1/ledger-sdk-rust"
keywords = ["ledger", "hid", "transport", "hardware-wallet", "cryptocurrency"]
categories = ["cryptography", "hardware-support"]
authors = ["0xjojo1 <jojomemo5129@gmail.com>"]

[dependencies]
libc = "0.2"
byteorder = "1.5"
cfg-if = "1"
thiserror = "2.0.16"
hex = "0.4"
log = "0.4"

ledger-sdk-transport = "0.0.1"
hidapi = { version = "2.6.1", features = [
    "linux-static-hidraw",
], default-features = false }

[dev-dependencies]
once_cell = "1"
serial_test = "3"
env_logger = "0.11"
futures = "0.3"
