[package]
name = "ledger-sdk-transport"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Transport abstraction layer for Ledger device communication"
readme = "../README.md"
repository = "https://github.com/0xjojo1/ledger-sdk-rust"
keywords = ["ledger", "transport", "hardware-wallet", "cryptocurrency"]
categories = ["cryptography", "hardware-support"]
authors = ["0xjojo1 <jojomemo5129@gmail.com>"]

[dependencies]
async-trait = "0.1.88"
ledger-sdk-apdu = "0.0.1"
